--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,13 +68,7 @@
     }
 
     function mapNumToBubbleSize(num) {
-        if (num < 75) return 3;
-        if (num < 150) return 5;
-        if (num < 500) return 9;
-        if (num < 700) return 11;
-        if (num < 1000) return 13;
-        if (num < 1500) return 17;
-        return 22;
+        return Math.ceil(num/1000); // Math.ceil(Math.pow(Math.log(num),2));
     }
 
     function changeYear() {
